2005-12-09  Johnny Jacob <johnnyjacob@gmail.com>
	* gui/dialogs/event-page.c : 
	(hour_sel_changed) : Added. Event handler for hour_selector
	(minute_sel_changed) : Added. Event handler for minute_selector
	(update_end_time_selector) : Added. Updates hour_selector 
	& minute_selector  
	(hour_minute_changed) : Added. Updates DateEdit based on hour 
	and minute selectors
	(sensitize_widgets) : Handle end_time_selector's sensitivity.
	(get_widgets) : Get minute_selector.
	(init_widgets) : Initialize hour_selector and minute_selector.
	gui/dialogs/event-page.glade : minute_selector GtkSpinButton added.

	* gui/dialogs/event-page.glade: Added the widgets to the glade
	
2005-11-27  Johnny Jacob  <johnnyjacob@gmail.com>

	** Fixes bug #324060

	* gui/dialogs/comp-editor.c (menu_file_close_cb): 
	Check wheather the summary is empty and prompt accordingly,

2005-11-28  Srinivasa Ragavan <sragavan@novell.com>

	** Refixes the bug #320210

	* calendar.error.xml : Default button is changed to GTK_RESPONSE_YES
	in "prompt-delete-appointment". It was missed out in the earlier
	patch.

2005-11-28  Johnny Jacob  <johnnyjacob@gmail.com>

	** Fixes the bug #320210

	* calendar.error.xml : Default button is changed to GTK_RESPONSE_YES
	in "prompt-delete-titled-appointment".

2005-12-09  Srinivasa Ragavan  <sragavan@novell.com>

	reviewed by: Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/dialogs/comp-editor.c: (editor_key_press_event),
	(setup_widgets):
	* gui/dialogs/event-page.c: (event_page_init),
	(create_image_event_box), (sensitize_widgets), (get_widgets),
	(alarm_changed_cb), (init_widgets),
	(event_page_create_source_option_menu), (make_status_icons):
	* gui/dialogs/event-page.glade:
	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips):
	* gui/e-calendar-view.h:
	* gui/e-day-view.c: (e_day_view_reshape_long_event),
	(e_day_view_reshape_day_event), (tooltip_get_view_event),
	(tooltip_destroy), (e_day_view_on_text_item_event):